VTK - fix 'take permission' aligning in table and set min-width for permission-tree to higher than help-info

--- a/src/main/resources/web/themes/default/default.css
+++ b/src/main/resources/web/themes/default/default.css
@@ -1301,7 +1301,7 @@ table.resourceInfo form#propertyForm ul.property .vrtx-textfield {
 }
 
 #vrtx-admin-ownership-form {
-  display: inline-block;
+  display: inline;
 }
 
 body#vrtx-edit-plaintext textarea {
